#18: Bugfix - landing page div not centered

--- a/src/styles/landing.module.scss
+++ b/src/styles/landing.module.scss
@@ -5,15 +5,13 @@
   display: flex;
   justify-content: center;
 
-
   &__inputGroup {
     @include main.glassyDiv;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 50px 20px 20px 20px;
-
+    padding: 60px 0px 20px 0px;
   }
 
   &__btn {
